syntax = "proto3";

package microservices.profiles;

import "google/protobuf/empty.proto";
import "buf/validate/validate.proto";
import "microservices/profiles/cmd/server/grpc/api/proto/types.proto";

option go_package = "microservices/profiles/cmd/server/grpc/api/proto/generated";

service ProfilesService {
  rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty);

  rpc SearchProfiles(SearchProfilesRequest) returns (SearchProfilesResponse);

  rpc GetProfilePreviews(GetProfilePreviewsRequest) returns (GetProfilePreviewsResponse);
}

message SearchProfilesRequest {
  string query = 1;

  uint64 offset    = 2;
  uint64 page_size = 3;
}

message SearchProfilesResponse {
  repeated ProfilePreview profile_previews = 1;
}

message GetProfilePreviewsRequest {
  repeated int32 ids = 1;
}

message GetProfilePreviewsResponse {
  repeated ProfilePreview profile_previews = 1;
}
