syntax = "proto3";

package microservices.profiles;

option go_package = "microservices/profiles/cmd/server/grpc/api/proto/generated";

message ProfilePreview {
  int32 id = 1;

  string name     = 2;
  string username = 3;
}

message PaginationArgs {
  uint64 offset    = 1;
  uint64 page_size = 2;
}
